src/pages/RestaurantsPage/RestaurantsPage.module.scss
@import "../../styles/constants.module.scss";
@import "../../styles/mediaQueries.scss";

.RestaurantsPageSection {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-top: 14px;
  padding-bottom: 53px;
  border-bottom: 0.5px solid rgba(151, 151, 151, 1);
  @include smallDesktopScreen {
    border-top: 0.5px solid rgba(151, 151, 151, 1);
    padding-top: 48px;
    padding-bottom: 137px;
  }

  .restaurantsPageLayout {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    width: $mobile-view-width;
    @include smallDesktopScreen {
      width: 100%;
    }

    .restaurantsPageContentContainer {
      display: flex;
      flex-flow: column;
      justify-content: flex-start;
      align-items: flex-start;
      gap: 24px;
      @include smallDesktopScreen {
        display: flex;
        flex-flow: column;
        justify-content: flex-start;
        align-items: center;
        width: 100%;
        gap: 40px;
      }

      .filtersContainer {
        display: flex;
        flex-flow: row;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        @include smallDesktopScreen {
          display: flex;
          flex-flow: row;
          justify-content: center;
          align-items: center;
          width: $desktop-view-width;
          gap: 40px;
        }

        .filterButton {
          font-size: 18px;
          line-height: 22px;
          letter-spacing: 1.9199999570846558px;
        }

        .activeButton {
          font-size: 18px;
          font-weight: 400;
          line-height: 21px;
          letter-spacing: 1.9199999570846558px;
          border-bottom: 1.8px solid rgba(222, 146, 0, 0.9);
          padding: 8px 0;
          @include smallDesktopScreen {
            border-bottom: none;
          }
        }
      }

      .restaurantPageTitleContainer {
        display: flex;
        flex-flow: row;
        justify-content: flex-start;
        align-items: center;
        font-size: 18px;
        line-height: 22px;
        letter-spacing: 1.9199999570846558px;
      }

      .dropDownsFiltersContainer {
        font-size: 18px;
        line-height: 22px;
        letter-spacing: 1.9199999570846558px;
        width: 100%;
        padding-bottom: 8px;
        @include smallDesktopScreen {
          display: flex;
          flex-flow: row;
          justify-content: center;
          align-items: center;
          background-color: rgba(250, 250, 250, 1);
          padding-bottom: 0;
        }
      }

      .restaurantsCardsContainer {
        display: flex;
        flex-flow: column;
        justify-content: center;
        align-items: center;
        gap: 25px;
        @include smallDesktopScreen {
          display: flex;
          flex-flow: row wrap;
          justify-content: center;
          align-items: center;
          width: $desktop-view-width;
          gap: 40px 24px;
        }
      }
    }
  }
}

